se agregan imagenes para el inicio de la pagina

--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
             <a href="#social" class="social">Participa</a>
         </div>
     </div>
+
+    <div id="image-ppal">
+        <img src="assets/images/tech.jpg" alt="">
+        <img src="assets/images/mundotech.jpg" alt="" class="image-ppal2">
+    </div>
 </body>
 </html>
